Cambio http por https en links.

--- a/sabyltimetracker/templates/tracker/dht_tasks_report.html
+++ b/sabyltimetracker/templates/tracker/dht_tasks_report.html
@@ -5,7 +5,7 @@
 {% block css %}
   {{ block.super }}
   <link rel="stylesheet" href="{% static '/css/datatable/dataTables.bootstrap.min.css' %}">
-  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.min.css" />
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.min.css" />
 
 {% endblock css %}
 
@@ -82,23 +82,8 @@
 
 {% block javascript %}
   {{ block.super }}
-<!--  <script type="text/javascript" src="{% static 'js/past_days.js' %}"></script>-->
-
-<!--  <script src="{% static 'js/data-table/datatables.min.js' %}"></script>-->
-<!--  <script src="{% static 'js/data-table/dataTables.bootstrap.min.js' %}"></script>-->
-<!--  <script src="{% static 'js/data-table/dataTables.buttons.min.js' %}"></script>-->
-<!--  <script src="{% static 'js/data-table/buttons.bootstrap.min.js' %}"></script>-->
-<!--  <script src="{% static 'js/data-table/jszip.min.js' %}"></script>-->
-<!--  <script src="{% static 'js/data-table/pdfmake.min.js' %}"></script>-->
-<!--  <script src="{% static 'js/data-table/vfs_fonts.js' %}"></script>-->
-<!--  <script src="{% static 'js/data-table/buttons.html5.min.js' %}"></script>-->
-<!--  <script src="{% static 'js/data-table/buttons.print.min.js' %}"></script>-->
-<!--  <script src="{% static 'js/data-table/buttons.colVis.min.js' %}"></script>-->
-<!--  <script src="{% static 'js/data-table/datatables-init.js' %}"></script>-->
-
 
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-<!--<script src="{% static 'js/datepicker_spanish.js' %}"></script>-->
 <script>
     $('#initialDay').datepicker({
         closeText: "Cerrar",
