--- a/sabyltimetracker/templates/tracker/past_days.html
+++ b/sabyltimetracker/templates/tracker/past_days.html
@@ -5,7 +5,7 @@
 {% block css %}
   {{ block.super }}
   <link rel="stylesheet" href="{% static '/css/datatable/dataTables.bootstrap.min.css' %}">
-  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.min.css" />
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.min.css" />
 {% endblock css %}
 
 {% block breadcrumbs %}
