Correccion en logout.

--- a/sabyltimetracker/templates/account/logout.html
+++ b/sabyltimetracker/templates/account/logout.html
@@ -19,7 +19,7 @@
             <button class="btn btn-danger" type="submit">{% trans 'Sign Out' %}</button>
             <br/>
             <br/>
-            <button onclick="goBack()" class="btn btn-outline-secondary" type="button">{% trans 'Back' %}</button>
+            <button onclick="goBack()" class="btn btn-outline-secondary" type="button">{% trans 'Regresar' %}</button>
           </form>
         </div>
       </div>
