--- a/sabyltimetracker/templates/tracker/dashboard.html
+++ b/sabyltimetracker/templates/tracker/dashboard.html
@@ -36,7 +36,7 @@
         <div class="stat-widget-one">
           <div class="stat-icon dib"><i class="ti-clipboard text-success border-success"></i></div>
           <div class="stat-content dib">
-            <div class="stat-text">{%  trans 'Workers with logs' %}</div>
+            <div class="stat-text">{%  trans 'Workers with logs' %}:</div>
             <div class="stat-digit">{{ workers_ratio }}%</div>
           </div>
         </div>
@@ -51,17 +51,10 @@
           <div class="stat-icon dib"><i class="ti-time text-primary border-primary"></i></div>
           <div class="stat-content dib">
             {%  if workers_missing_logs %}
-              {% if workers_missing_logs|length == 1 %}
                 <div class="stat-text">
-                  {% trans 'The logs for' %} {{ workers_missing_logs|first }} {% trans "require attention." %}
+                  Trabajadores sin registros:
                 </div>
-                <div class="stat-digit">{% trans "There is 1 worker left." %}</div>
-              {% else %}
-                <div class="stat-text">
-                  {% trans 'The logs for' %} {{ workers_missing_logs|ellipsize:3 }} {% trans "require attention." %}
-                </div>
-                <div class="stat-digit">{% trans 'There are' %} {{ workers_missing_logs|length }} {% trans "workers left." %}</div>
-              {% endif %}
+                <div class="stat-digit">{{ workers_missing_logs|length }}</div>
             {% else %}
               <div class="stat-text">
                 {% trans "All workers have logs to match their hours. When you are sure everything is done, you can end the day." %}
