--- a/sabyltimetracker/templates/tracker/dashboard.html
+++ b/sabyltimetracker/templates/tracker/dashboard.html
@@ -52,7 +52,7 @@
           <div class="stat-content dib">
             {%  if workers_missing_logs %}
                 <div class="stat-text">
-                  Trabajadores sin registros:
+                  Trabajadores con registros incompletos:
                 </div>
                 <div class="stat-digit">{{ workers_missing_logs|length }}</div>
             {% else %}
