Correcciones en editar días pasados.

--- a/sabyltimetracker/templates/base.html
+++ b/sabyltimetracker/templates/base.html
@@ -270,7 +270,7 @@
 
 
   <div id="div-mensaje-error" class="alert alert-danger mx-2 my-2" role="alert" style="display:none;">
-    <strong>Error!</strong> <span id="mensaje-error"></span>
+    <span id="mensaje-error"></span>
     <button id="cerrar-mensaje-error" type="button" class="close" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
