--- a/sabyltimetracker/templates/tracker/past_days_edit.html
+++ b/sabyltimetracker/templates/tracker/past_days_edit.html
@@ -54,166 +54,204 @@
 {% endblock javascript_header %}
 
 {% block content %}
-  <div class="row">
-    <div class="col-xs-6 col-lg-12">
-      <div class="card">
-        <div class="card-header">
-          <strong><label for="task" class=" form-control-label">{% trans "Select task" %}</label></strong>
-        </div>
-        <div class="card-body card-block">
-          <div class="row form-group">
-            <div class="col-12 col-lg-3"><label for="task-category">{% trans 'Task category:' %}</label></div>
-            <div class="col-12 col-lg-9">
-              <select id="task-category" class="form-control">
-                <option value="">{% trans 'All Categories' %}</option>
-                {% for category in grouped_tasks %}
-                  <option value="{{ category.name }}">{{ category.name }}</option>
-                {% endfor %}
-              </select>
-            </div>
-          </div>
-          <div class="row form-group">
-            <div class="col-12 col-lg-3"><label for="task">{% trans 'Task:' %}</label></div>
-            <div class="col-12 col-lg-9">
-              <select id="task" name="task" class="form-control">
-                <option value="">-{% trans 'Select a task' %}-</option>
-                {% for category in grouped_tasks %}
-                  {% for task in category.tasks %}
-                    <option value="{{ task.id }}">{{ task.code }} - {{ task.name }}</option>
-                  {% endfor %}
-                {% endfor %}
-              </select>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <div class="row">
-    <div class="col-xs-6 col-lg-12">
-      <div class="card">
-        <div class="card-header">
-          <strong>{% trans 'Hours per worker' %}</strong>
-        </div>
-        <div class="card-body card-block">
-          <p>{% trans 'The day you are editing was a '%} {{ workday.date|date:"l" }}. {% trans 'Each worker is expected to have worked' %} {{ expected }} {% trans 'hours.' %}</p>
-          <table id="hours_per_user" class="table table-striped table-bordered">
-            <thead>
-            <tr>
-              <th>{% trans "Nº" %}</th>
-              <th>{% trans "Category" %}</th>
-              <th>{% trans "Full Name" %}</th>
-              <th>
-                <span class="hours-label">{% trans "Select a task" %}</span>
-                <input id="select-all" type="checkbox" class="form-control checkbox-lg"/>
-              </th>
-              <th class="logged-hours-label">
-                {% trans "Total hours logged" %}
-              </th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for worker in workers %}
-              <tr>
-                <td>{{ worker.code }}</td>
-                <td>{{ worker.category.code }}</td>
-                <td>{{ worker.last_name }}, {{ worker.first_name }}</td>
-                <td>
-                  <input type="number" min="0" max="24" step="0.5"class="hours-input form-control checkbox-lg"
-                         id="{{ worker.code }}-hours"
-                         name="{{ worker.code }}"
-                         value="0"
-                         disabled
-                  />
-                </td>
-                <td data-toggle="modal" data-target="#{{ worker.code }}-detail">
-                  <p class="text-center"><u id="{{ worker.code }}-logged-hours">{{ worker.total_hours }}</u></p>
-                  {% if worker.passes_controls %}
-                    <div class="progress">
-                      <div class="progress-bar bg-success" role="progressbar" style="width: {{ worker.hours_percent }}%" aria-valuenow="{{ worker.hours_percent }}" aria-valuemin="0" aria-valuemax="100">{{ worker.hours_percent }}%</div>
-                    </div>
-                  {% elif worker.hours_percent < 100 %}
-                    <div class="progress">
-                      <div class="progress-bar bg-warning" role="progressbar" style="width: {{ worker.hours_percent }}%" aria-valuenow="{{ worker.hours_percent }}" aria-valuemin="0" aria-valuemax="100">{{ worker.hours_percent }}%</div>
-                    </div>
-                  {% else %}
-                    <div class="progress">
-                      <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">{{ worker.hours_percent }}%</div>
-                    </div>
-                  {% endif %}
-                </td>
-                <div class="modal fade" id="{{ worker.code }}-detail" tabindex="-1" role="dialog" aria-labelledby="{{ worker.code }}-label" aria-hidden="true">
-                  <div class="modal-dialog modal-md" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h5 class="modal-title" id="{{ worker.code }}-label">{% trans 'Detail for' %} {{ worker.last_name }}, {{ worker.first_name }}</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="{% trans 'Close' %}">
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-                      <div class="modal-body">
-                        <ul>
-                          {% for log in worker.logs %}
-                            <li>
-                              <p>
-                                {% if log.task.is_boolean %}
-                                  {% if log.comment %}
-                                    {{ log.task.name }} {% trans 'with comment: "' %}{{ log.comment }}".
-                                  {% else %}
-                                    {{ log.task.name }}.
-                                  {% endif %}
-                                {% else %}
-                                  {% if log.comment %}
-                                    {{ log.amount }} {% trans 'hours in' %} {{ log.task.code }} {{ log.task.name }} {% trans 'with comment: "' %}{{ log.comment }}".
-                                  {% else %}
-                                    {{ log.amount }} {% trans 'hours in' %} {{ log.task.code }} {{ log.task.name }}.
-                                  {% endif %}
-                                {% endif %}
-                              </p>
-                            </li>
-                          {% endfor %}
-                        </ul>
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-lg btn-block btn-secondary" data-dismiss="modal">{% trans 'Close' %}</button>
-                      </div>
-                    </div>
-                  </div>
+
+  {% if hayError %}
+      <div class="alert alert-danger mx-2 my-2" role="alert">
+        <span>Hubo un error al cargar los registros.</span>
+      </div>
+  {% else %}
+      <div class="row">
+        <div class="col-xs-6 col-lg-12">
+          <div class="card">
+            <div class="card-header">
+              <strong><label for="task" class=" form-control-label">{% trans "Select task" %}</label></strong>
+            </div>
+            <div class="card-body card-block">
+              <div class="row form-group">
+                <div class="col-12 col-lg-3"><label for="task-category">{% trans 'Task category:' %}</label></div>
+                <div class="col-12 col-lg-9">
+                  <select id="task-category" class="form-control">
+                    <option value="">{% trans 'All Categories' %}</option>
+                    {% for category in grouped_tasks %}
+                      <option value="{{ category.name }}">{{ category.name }}</option>
+                    {% endfor %}
+                  </select>
                 </div>
-              </tr>
-            {% endfor %}
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
+              </div>
 
-  <div id="comment-group" class="row">
-    <div class="col-xs-6 col-lg-12">
-      <div class="card">
-        <div class="card-header">
-          <strong><label for="comment">{% trans "Comment" %}</label></strong>
-        </div>
-        <div class="card-body card-block">
-          <div class="form-group">
-            <textarea id="comment" name="comment" rows="2" placeholder="{% trans 'Comment (optional)' %}" class="form-control"></textarea>
+              <div class="row form-group">
+                <div class="col-12 col-lg-3"><label for="task-category">Buscar tarea:</label></div>
+                <div class="col-12 col-lg-9">
+                  <input id="task-browser" class="form-control" value="">
+                </div>
+              </div>
+
+
+              <div class="row form-group">
+                <div class="col-12 col-lg-3"><label for="task">{% trans 'Task:' %}</label></div>
+                <div class="col-12 col-lg-9">
+                  <select id="task" name="task" class="form-control">
+                    <option id="0000" value="">-{% trans 'Select a task' %}-</option>
+                    {% for category in grouped_tasks %}
+                      {% for task in category.tasks %}
+                        <option id="{{ task.id }}" value="{{ task.id }}">{{ task.code }} - {{ task.name }}</option>
+                      {% endfor %}
+                    {% endfor %}
+                  </select>
+                </div>
+              </div>
+
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
 
-  <div class="row">
-    <div class="col-xs-6 col-lg-12">
-      <div class="card">
-        <div class="card-body card-block">
-          <button id="submit-hours" type="submit" disabled class="btn btn-lg btn-block btn-success">{% trans "Log Hours" %}</button>
+      <div class="row">
+        <div class="col-xs-6 col-lg-12">
+          <div class="card">
+            <div class="card-header">
+              <strong>{% trans 'Hours per worker' %}</strong>
+            </div>
+            <div class="card-body card-block">
+              <p>{% trans 'The day you are editing was a '%} {{ workday.date|date:"l" }}. {% trans 'Each worker is expected to have worked' %} {{ expected }} {% trans 'hours.' %}</p>
+              <table id="hours_per_user" class="table table-striped table-bordered">
+                <thead>
+                <tr>
+                  <th>{% trans "Nº" %}</th>
+                  <th>{% trans "Category" %}</th>
+                  <th>{% trans "Full Name" %}</th>
+                  <th>
+                    <span class="hours-label">{% trans "Select a task" %}</span>
+                    <input id="select-all" type="checkbox" class="form-control checkbox-lg"/>
+                  </th>
+                  <th>{% trans "Comment" %}</th>
+                  <th class="logged-hours-label">{% trans "Total hours logged" %}</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for worker in workers %}
+                  <tr>
+                    <td>{{ worker.code }}</td>
+                    <td>{{ worker.category.code }}</td>
+                    <td>{{ worker.last_name }}, {{ worker.first_name }}</td>
+                    <td>
+                      <input type="number" min="0" max="24" step="0.5" class="hours-input form-control checkbox-lg"
+                             id="{{ worker.code }}-hours"
+                             name="{{ worker.code }}"
+                             value="0"
+                             disabled
+                      />
+                    </td>
+                    <td>
+                      <button data-toggle="modal" data-target="#{{ worker.code }}-comment-modal" type="button" class="btn btn-secondary comentario">
+                              Agregar
+                      </button>
+                    </td>
+                    <div class="modal fade" id="{{ worker.code }}-comment-modal" tabindex="-1" role="dialog" aria-labelledby="{{ worker.code }}-label" aria-hidden="true">
+                      <div class="modal-dialog modal-md" role="document">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h5 class="modal-title" id="{{ worker.code }}-label-comment">Comentario para {{ worker.last_name }}, {{ worker.first_name }}</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="{% trans 'Close' %}">
+                              <span aria-hidden="true">&times;</span>
+                            </button>
+                          </div>
+                          <div class="modal-body" style="margin-left: 4%;">
+                            <div id="comment-group" class="row">
+                              <div class="col-xs-6 col-lg-12">
+                                  <div class="form-group">
+                                    <textarea id="{{ worker.code }}-comment" name="comment" rows="2" placeholder="{% trans 'Comment (optional)' %}" class="form-control"></textarea>
+                                  </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-lg btn-block btn-secondary" data-dismiss="modal">{% trans 'Close' %}</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+
+                    <td data-toggle="modal" data-target="#{{ worker.code }}-detail">
+                      <div class="progress">
+                        {% if worker.passes_controls_string == "igual" %}
+                          <div class="progress-bar bg-success" role="progressbar" style="width: {{ worker.hours_percent }}%" aria-valuenow="{{ worker.hours_percent }}" aria-valuemin="0" aria-valuemax="100">
+                            <u id="{{ worker.code }}-logged-hours" ></u>
+                          </div>
+                        {% elif worker.passes_controls_string == "menor" %}
+                          <div class="progress-bar bg-warning" role="progressbar" style="width: {{ worker.hours_percent }}%" aria-valuenow="{{ worker.hours_percent }}" aria-valuemin="0" aria-valuemax="100">
+                            <u id="{{ worker.code }}-logged-hours" ></u>
+                          </div>
+                        {% else %}
+                          <div class="progress-bar bg-danger" role="progressbar" style="width: {{ worker.hours_percent }}%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                            <u id="{{ worker.code }}-logged-hours"></u>
+                          </div>
+                        {% endif %}
+                      </div>
+                    </td>
+
+
+
+                    <div class="modal fade" id="{{ worker.code }}-detail" tabindex="-1" role="dialog" aria-labelledby="{{ worker.code }}-label" aria-hidden="true">
+                      <div class="modal-dialog modal-md" role="document">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h5 class="modal-title" id="{{ worker.code }}-label">{% trans 'Detail for' %} {{ worker.last_name }}, {{ worker.first_name }}</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="{% trans 'Close' %}">
+                              <span aria-hidden="true">&times;</span>
+                            </button>
+                          </div>
+                          <div class="modal-body" style="margin-left: 4%;">
+                            <ul>
+                              {% for log in worker.logs %}
+                                <li>
+                                  <p id="{{ worker.code }}-comment-initial">
+                                    {% if log.task.is_boolean %}
+                                      {% if log.comment %}
+                                        {{ log.task.name }} {% trans 'with comment: "' %}{{ log.comment }}".
+                                      {% else %}
+                                        {{ log.task.name }}.
+                                      {% endif %}
+                                    {% else %}
+                                      {% if log.comment %}
+                                        {{ log.amount }} {% trans 'hours in' %} {{ log.task.code }} {{ log.task.name }} {% trans 'with comment: "' %}{{ log.comment }}".
+                                      {% else %}
+                                        {{ log.amount }} {% trans 'hours in' %} {{ log.task.code }} {{ log.task.name }}.
+                                      {% endif %}
+                                    {% endif %}
+                                  </p>
+                                </li>
+                              {% endfor %}
+                            </ul>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-lg btn-block btn-secondary" data-dismiss="modal">{% trans 'Close' %}</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </tr>
+                {% endfor %}
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
+
+      <div class="row">
+        <div class="col-xs-6 col-lg-12">
+          <div class="card">
+            <div class="card-body card-block">
+              <button id="submit-hours" type="submit" disabled class="btn btn-lg btn-block btn-success">{% trans "Log Hours" %}</button>
+            </div>
+          </div>
+        </div>
+      </div>
+  {% endif %}
+
 {% endblock content%}
 
 
