--- a/sabyltimetracker/templates/account/logout.html
+++ b/sabyltimetracker/templates/account/logout.html
@@ -9,8 +9,8 @@
     <div class="container">
       <div class="login-content">
         <div class="login-form">
-          <h1>{% trans "Sign Out" %}</h1>
-          <p>{% trans 'Are you sure you want to sign out?' %}</p>
+          <h1 style="text-align: center;">{% trans "Sign Out" %}</h1>
+          <p style="text-align: center;">{% trans 'Are you sure you want to sign out?' %}</p>
           <form method="post" action="{% url 'account_logout' %}">
             {% csrf_token %}
             {% if redirect_field_value %}
