Se ordenan los workers por codigo.

--- a/sabyltimetracker/templates/tracker/dht_report.html
+++ b/sabyltimetracker/templates/tracker/dht_report.html
@@ -167,10 +167,10 @@
 
 </script>
 
-<script>
-    $('#initialDay').val('15/04/2020');
-    $('#finishBiweeklyDay').val('30/04/2020');
-    $('#finishDay').val('07/05/2020');
-</script>
+<!--<script>-->
+<!--    $('#initialDay').val('15/04/2020');-->
+<!--    $('#finishBiweeklyDay').val('30/04/2020');-->
+<!--    $('#finishDay').val('07/05/2020');-->
+<!--</script>-->
 
 {% endblock javascript %}
