--- a/sabyltimetracker/templates/tracker/dht_tasks_report_resumen.html
+++ b/sabyltimetracker/templates/tracker/dht_tasks_report_resumen.html
@@ -97,9 +97,9 @@
 <!--<script src="{% static 'js/datepicker_spanish.js' %}"></script>-->
 <script type="text/javascript" src="{% static 'js/dht_tasks_report_resumen.js' %}"></script>
 
-<script>
-    $('#initialDay').val('28/04/2020');
-    $('#finishBiweeklyDay').val('30/04/2020');
-</script>
+<!--<script>-->
+<!--    $('#initialDay').val('28/04/2020');-->
+<!--    $('#finishBiweeklyDay').val('30/04/2020');-->
+<!--</script>-->
 
 {% endblock javascript %}
