--- a/sabyltimetracker/templates/tracker/dht_tasks_report.html
+++ b/sabyltimetracker/templates/tracker/dht_tasks_report.html
@@ -157,9 +157,9 @@
 
 </script>
 
-<script>
-    $('#initialDay').val('28/04/2020');
-    $('#finishBiweeklyDay').val('30/04/2020');
-</script>
+<!--<script>-->
+<!--    $('#initialDay').val('28/04/2020');-->
+<!--    $('#finishBiweeklyDay').val('30/04/2020');-->
+<!--</script>-->
 
 {% endblock javascript %}
