Se corrigen tareas que nos suman.

--- a/sabyltimetracker/templates/tracker/log_hours.html
+++ b/sabyltimetracker/templates/tracker/log_hours.html
@@ -36,6 +36,7 @@
     var tasks = {{ tasks|js }};
     var grouped_tasks = {{ grouped_tasks|js }};
     var workers = {{ workers|js }};
+    var tareas_que_no_suman = {{ tareas_que_no_suman|js }};
     const SELECT_TASK_TXT = '{% trans 'Select a task' %}';
     const SELECT_CAT_FIRST_TXT = '{% trans '-' %}';
     const UPDATE_HOURS_FOR_TXT = '{% trans 'Update hours for' %}';
