--- a/sabyltimetracker/templates/base.html
+++ b/sabyltimetracker/templates/base.html
@@ -74,6 +74,8 @@
           <li><a href="{% url 'tracker:dht_tasks_report' request.user.username %}"><i class="menu-icon fa fa-table"></i>{% trans 'DHT Tareas' %}</a></li>
           {%  if request.user.is_superuser or request.user.is_staff %}
             <li><a href="{% url 'tracker:dht_tasks_report_resumen' request.user.username %}"><i class="menu-icon fa fa-table"></i>{% trans 'DHT Tareas Resumen' %}</a></li>
+            <li><a href="{% url 'tracker:dht_prod_report' request.user.username %}"><i class="menu-icon fa fa-table"></i>{% trans 'DHT Producción' %}</a></li>
+            <li><a href="{% url 'tracker:dht_lluvias_report' request.user.username %}"><i class="menu-icon fa fa-table"></i>{% trans 'DHT Lluvias' %}</a></li>
             <li><a href="{% url 'admin:index' %}"><i class="menu-icon fa fa-table"></i>{% trans 'Administración' %}</a></li>
           {% endif %}
           {##}
