--- a/sabyltimetracker/templates/tracker/dht_report.html
+++ b/sabyltimetracker/templates/tracker/dht_report.html
@@ -105,7 +105,7 @@
         "jul","ago","sep","oct","nov","dic" ],
         dayNames: [ "domingo","lunes","martes","miércoles","jueves","viernes","sábado" ],
         dayNamesShort: [ "dom","lun","mar","mié","jue","vie","sáb" ],
-        dayNamesMin: [ "D","L","M","X","J","V","S" ],
+        dayNamesMin: [ "D","L","M","M","J","V","S" ],
         weekHeader: "Sm",
         dateFormat: "dd/mm/yy",
         firstDay: 1,
@@ -124,7 +124,7 @@
         "jul","ago","sep","oct","nov","dic" ],
         dayNames: [ "domingo","lunes","martes","miércoles","jueves","viernes","sábado" ],
         dayNamesShort: [ "dom","lun","mar","mié","jue","vie","sáb" ],
-        dayNamesMin: [ "D","L","M","X","J","V","S" ],
+        dayNamesMin: [ "D","L","M","M","J","V","S" ],
         weekHeader: "Sm",
         dateFormat: "dd/mm/yy",
         firstDay: 1,
