--- a/sabyltimetracker/templates/tracker/dht_prod_report.html
+++ b/sabyltimetracker/templates/tracker/dht_prod_report.html
@@ -14,7 +14,7 @@
     <div class="col-sm-4">
       <div class="page-header float-left">
         <div class="page-title">
-          <h1>DHT Tareas</h1>
+          <h1>DHT Producción</h1>
         </div>
       </div>
     </div>
@@ -25,7 +25,7 @@
 
 
 {% block content %}
-<form method="post" autocomplete="off" action="{% url 'tracker:api_dht_tasks_report' request.user.username %}">{% csrf_token %}
+<form method="post" autocomplete="off" action="{% url 'tracker:api_dht_prod_report' request.user.username %}">{% csrf_token %}
 
   {%  if request.user.is_superuser or request.user.is_staff %}
     <div class="row form-group">
