--- a/sabyltimetracker/templates/tracker/log_hours.html
+++ b/sabyltimetracker/templates/tracker/log_hours.html
@@ -37,6 +37,9 @@
     var grouped_tasks = {{ grouped_tasks|js }};
     var workers = {{ workers|js }};
     var tareas_que_no_suman = {{ tareas_que_no_suman|js }};
+    var tasks_many_workers = {{ tareas_varios_trabajadores|js }};
+    var tareas_especiales_todo_el_dia = {{ tareas_especiales_todo_el_dia|js }};
+    var expected = {{ expected|js }};
     const SELECT_TASK_TXT = '{% trans 'Select a task' %}';
     const SELECT_CAT_FIRST_TXT = '{% trans '-' %}';
     const UPDATE_HOURS_FOR_TXT = '{% trans 'Update hours for' %}';
@@ -94,7 +97,7 @@
             <div class="col-12 col-lg-3"><label for="task-category">{% trans 'Task category:' %}</label></div>
             <div class="col-12 col-lg-9">
               <select id="task-category" class="form-control">
-                <option value="">{% trans 'All Categories' %}</option>
+                <option value="">{% trans 'Todas las categorías' %}</option>
                 {% for category in grouped_tasks %}
                   <option value="{{ category.name }}">{{ category.name }}</option>
                 {% endfor %}
@@ -115,10 +118,8 @@
             <div class="col-12 col-lg-9">
               <select id="task" name="task" class="form-control">
                 <option id="0000" value="">-{% trans 'Select a task' %}-</option>
-                {% for category in grouped_tasks %}
-                  {% for task in category.tasks %}
-                    <option id="{{ task.id }}" value="{{ task.id }}">{{ task.code }} - {{ task.name }}</option>
-                  {% endfor %}
+                {% for task in tasks %}
+                  <option id="{{ task.id }}" value="{{ task.id }}">{{ task.code }} - {{ task.name }}</option>
                 {% endfor %}
               </select>
             </div>
@@ -137,12 +138,56 @@
         </div>
         <div class="card-body card-block">
           <p>{% trans 'Each worker is expected to work' %} {{ expected }} {% trans 'hours.' %}</p>
+
+          <div id="div-hours-many-workers" class="row" style="display:none;">
+            <div class="col-md-5">
+                <span>Cantidad de horas que se asignarán a todos los trabajadores: </span>
+            </div>
+            <div class="col-md-1">
+                <input type="number" min="0" max="24" step="0.5" class="form-control checkbox-lg" id="hours-many-workers" name="hours-many-workers" value="0">
+            </div>
+            <div class="col-md-3">
+              <button data-toggle="modal" data-target="#comment-modal-many-workers" type="button" class="btn btn-secondary">
+                      Agregar comentario
+              </button>
+            </div>
+                <div class="modal fade" id="comment-modal-many-workers" tabindex="-1" role="dialog" aria-labelledby="label" aria-hidden="true">
+                  <div class="modal-dialog modal-md" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="label-comment-many-workers">Comentario para todos los trabajadores</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="{% trans 'Close' %}">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body" style="margin-left: 4%;">
+                        <div id="comment-group-many-workers" class="row">
+                          <div class="col-xs-6 col-lg-12">
+                              <div class="form-group">
+                                <textarea id="comment-many-workers" name="comment-many-workers" rows="2" placeholder="Ingrese un comentario" class="form-control"></textarea>
+                              </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-lg btn-block btn-secondary" data-dismiss="modal">{% trans 'Close' %}</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+          </div>
+
           <table id="hours_per_user" class="table table-striped table-bordered">
             <thead>
             <tr>
               <th>{% trans "Nº" %}</th>
               <th>{% trans "Category" %}</th>
               <th>{% trans "Full Name" %}</th>
+
+              <th id="th-hours-many-workers" style="display:none;">
+                <span class="hours-label-many-workers">{% trans "Seleccionar" %}</span>
+                <input id="select-many-workers" type="checkbox" class="form-control checkbox-lg"/>
+              </th>
               <th>
                 <span class="hours-label">{% trans "Select a task" %}</span>
                 <input id="select-all" type="checkbox" class="form-control checkbox-lg"/>
@@ -157,6 +202,9 @@
                 <td>{{ worker.code }}</td>
                 <td>{{ worker.category.code }}</td>
                 <td>{{ worker.last_name }}, {{ worker.first_name }}</td>
+                <td class="td-hours-many-workers" style="display:none;">
+                  <input type="checkbox" class="form-control checkbox-lg check-input" id="{{ worker.code }}-select-many-workers">
+                </td>
                 <td>
                   <input type="number" min="0" max="24" step="0.5" class="hours-input form-control checkbox-lg"
                          id="{{ worker.code }}-hours"
@@ -180,7 +228,7 @@
                         </button>
                       </div>
                       <div class="modal-body" style="margin-left: 4%;">
-                        <div id="comment-group" class="row">
+                        <div class="row">
                           <div class="col-xs-6 col-lg-12">
                               <div class="form-group">
                                 <textarea id="{{ worker.code }}-comment" name="comment" rows="2" placeholder="{% trans 'Comment (optional)' %}" class="form-control"></textarea>
@@ -196,24 +244,30 @@
                 </div>
 
 
-
                 <td data-toggle="modal" data-target="#{{ worker.code }}-detail">
                   <div class="progress">
-                    {% if worker.passes_controls_string == "igual" %}
-                      <div class="progress-bar bg-success" role="progressbar" style="width: {{ worker.hours_percent }}%" aria-valuenow="{{ worker.hours_percent }}" aria-valuemin="0" aria-valuemax="100">
-                        <u id="{{ worker.code }}-logged-hours" ></u>
-                      </div>
-                    {% elif worker.passes_controls_string == "menor" %}
-                      <div class="progress-bar bg-warning" role="progressbar" style="width: {{ worker.hours_percent }}%" aria-valuenow="{{ worker.hours_percent }}" aria-valuemin="0" aria-valuemax="100">
-                        <u id="{{ worker.code }}-logged-hours" ></u>
-                      </div>
+                    {% if worker.tiene_tarea_especial_todo_el_dia %}
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                            <u id="{{ worker.code }}-logged-hours"></u>
+                        </div>
                     {% else %}
-                      <div class="progress-bar bg-danger" role="progressbar" style="width: {{ worker.hours_percent }}%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                        <u id="{{ worker.code }}-logged-hours"></u>
-                      </div>
+                        {% if worker.passes_controls_string == "igual" %}
+                          <div class="progress-bar bg-success" role="progressbar" style="width: {{ worker.hours_percent }}%" aria-valuenow="{{ worker.hours_percent }}" aria-valuemin="0" aria-valuemax="100">
+                            <u id="{{ worker.code }}-logged-hours"></u>
+                          </div>
+                        {% elif worker.passes_controls_string == "menor" %}
+                          <div class="progress-bar bg-warning" role="progressbar" style="width: {{ worker.hours_percent }}%" aria-valuenow="{{ worker.hours_percent }}" aria-valuemin="0" aria-valuemax="100">
+                            <u id="{{ worker.code }}-logged-hours"></u>
+                          </div>
+                        {% else %}
+                          <div class="progress-bar bg-danger" role="progressbar" style="width: {{ worker.hours_percent }}%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                            <u id="{{ worker.code }}-logged-hours"></u>
+                          </div>
+                        {% endif %}
                     {% endif %}
                   </div>
                 </td>
+
 
 
                 <div class="modal fade" id="{{ worker.code }}-detail" tabindex="-1" role="dialog" aria-labelledby="{{ worker.code }}-label" aria-hidden="true">
@@ -232,9 +286,9 @@
                               <p id="{{ worker.code }}-comment-initial">
                                 {% if log.task.is_boolean %}
                                   {% if log.comment %}
-                                    {{ log.task.name }} {% trans 'with comment: "' %}{{ log.comment }}".
+                                    {{ log.amount }} {% trans 'hours in' %} {{ log.task.name }} {% trans 'with comment: "' %}{{ log.comment }}".
                                   {% else %}
-                                    {{ log.task.name }}.
+                                    {{ log.amount }} {% trans 'hours in' %} {{ log.task.name }}.
                                   {% endif %}
                                 {% else %}
                                   {% if log.comment %}
