--- a/sabyltimetracker/templates/base.html
+++ b/sabyltimetracker/templates/base.html
@@ -69,6 +69,11 @@
             <a href="{% url 'home' %}"> <i class="menu-icon fa fa-dashboard"></i>{% trans 'Dashboard' %}</a>
           </li>
           <h3 class="menu-title">{% trans 'Menu' %}</h3><!-- /.menu-title -->
+          {%  if request.user.is_superuser or request.user.is_staff %}
+            <li><a href="{% url 'tracker:day_review_select' request.user.username %}"><i class="menu-icon fa fa-calendar"></i>{% trans 'Parte Diario' %}</a></li>
+          {% else %}
+            <li><a href="{% url 'tracker:log_hours' request.user.username %}"><i class="menu-icon fa fa-calendar"></i>{% trans 'Parte Diario' %}</a></li>
+          {% endif %}
           <li><a href="{% url 'tracker:past_days' request.user.username %}"><i class="menu-icon fa fa-calendar"></i>{% trans 'Past Days' %}</a></li>
           <li><a href="{% url 'tracker:dht_report' request.user.username %}"><i class="menu-icon fa fa-table"></i>{% trans 'DHT General' %}</a></li>
           <li><a href="{% url 'tracker:dht_prod_report' request.user.username %}"><i class="menu-icon fa fa-table"></i>{% trans 'DHT Producción' %}</a></li>
@@ -243,7 +248,7 @@
 
       <div class="col-sm-5">
         {% if request.user.is_authenticated %}
-          <a id="log-in-link" class="btn btn-outline-danger pull-right" href="{% url 'account_logout' %}"><i class="fa fa-power -off"></i>{% trans "Sign Out" %}</a>
+          <a id="log-out-link" class="btn btn-outline-danger pull-right" href="{% url 'account_logout' %}"><i class="fa fa-power -off"></i>{% trans "Sign Out" %}</a>
         {% else %}
           <a id="log-in-link" class="btn btn-outline-success pull-right" href="{% url 'account_login' %}">{% trans "Sign In" %}</a>
         {% endif %}
