Corrección en texto cuando se completan todos los registros del workday.

--- a/sabyltimetracker/templates/tracker/day_review.html
+++ b/sabyltimetracker/templates/tracker/day_review.html
@@ -61,7 +61,7 @@
                   <div class="stat-digit">{{ workers_missing_logs|length }}</div>
               {% else %}
                 <div class="stat-text">
-                  {% trans "All workers have logs to match their hours. When you are sure everything is done, you can end the day." %}
+                  {% trans "Todos los trabajadores tienen registros correspondientes a sus horas. Cuando esté seguro de que todo está hecho, puede terminar el día." %}
                 </div>
               {% endif %}
             </div>
